@@ -228,9 +228,9 @@ Certainty: possible
 Ref: policy 4.9
 Info: The rules file use the make variable $(_).
  .
- According to Policy 4.9, <q>invoking either of <tt>make -f debian/rules
+ According to Policy 4.9, 'invoking either of <tt>make -f debian/rules
  &lt;args&hellip;&gt;</tt> or <tt>./debian/rules
- &lt;args&hellip;&gt;</b>' must result in identical behavior.</q>
+ &lt;args&hellip;&gt;</tt>' must result in identical behavior.
  One way to inadvertently violate this policy is to use the $_ variable.
  .
  If the rules file uses $(dir $(_)) to discover the directory containing
